# python-autopypath

./: .gitignore  CHANGELOG.rst  CODE_OF_CONDUCT.rst  MANIFEST.in  README.md  README.rst  SECURITY.rst  autopypath.tgz  bootstrap.py  example.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: build.yml  python-package.yml
autopypath/: __init__.py
docs_source/: conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  public_api.rst  requirements.txt  usage.rst
docs_source/source/: autopypath.custom.debug.rst  autopypath.custom.rst  autopypath.rst  autopypath.types.rst
hooks/: pre-commit
src/autopypath/: __init__.py  _context.py  _defaults.py  _exceptions.py  _load_strategy.py  _log.py  _marker_type.py  _meta.py  _path_resolution.py  _typing.py  _validate.py  debug.py  defaults.py  load_strategy.py  marker_type.py  path_resolution.py  types.py
src/autopypath/_config_py_path/: __init__.py  _conf_source.py  _config_py_path.py
src/autopypath/_doc_utils/: _enum_docstrings.py
src/autopypath/custom/: __init__.py  debug.py
src/autopypath/types/: __init__.py  _no_path.py
tests/: __init__.py  test_autopypath.py  test_config_py_path.py  test_custom.py  test_debug.py  test_doc_utils.py  test_no_path.py  test_validate.py
tests/_config_py_path/: test_autopypath.py  test_config.py  test_default.py  test_dotenv.py  test_manual.py  test_pyproject.py  test_toml.py
tests/autopypath_tests/: test_autopypath.py  test_config_py_path.py  test_context.py  test_custom.py  test_debug.py  test_doc_utils.py  test_no_path.py  test_validate.py
tests/autopypath_tests/_config_py_path/: test_autopypath.py  test_config.py  test_default.py  test_dotenv.py  test_pyproject.py  test_toml.py
tests/testspec/: __init__.py  base.py  helpers.py  idspec.py  pytest_action.py  test_action.py  test_get.py  test_set.py  test_setget.py
tests/testspec/tests/: test_assertions.py
(+9 files in other folders)
